--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "chart.js": "^3.4.1",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "leaflet": "^1.6.1",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "notistack": "^1.0.9",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
     "react-countup": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.11.0",
+    "react-leaflet": "^2.7.0",
     "react-logger": "^1.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
