--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "chart.js": "^3.4.1",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "i18next": "^20.2.4",
+    "i18next-http-backend": "^1.2.4",
     "leaflet": "^1.6.1",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
@@ -27,6 +29,7 @@
     "react-countup": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.11.1",
+    "react-i18next": "^11.8.15",
     "react-leaflet": "^2.7.0",
     "react-logger": "^1.1.0",
     "react-redux": "^7.2.4",
