--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@fontsource/roboto": "^4.5.0",
+    "@highcharts/map-collection": "^1.1.3",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.6.1",
     "@material-ui/core": "^4.12.1",
@@ -17,10 +19,13 @@
     "chart.js": "^3.4.1",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "highcharts": "^9.1.2",
+    "highcharts-react-official": "^3.0.0",
     "i18next": "^20.2.4",
     "i18next-http-backend": "^1.2.4",
     "leaflet": "^1.6.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "notistack": "^1.0.9",
     "numeral": "^2.0.6",
