--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.6.1",
     "@material-ui/core": "^4.12.1",
+    "@material-ui/data-grid": "^4.0.0-alpha.35",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@reduxjs/toolkit": "^1.6.0",
